[gd_scene load_steps=5 format=3 uid="uid://bwc2vsl3mpnr5"]

[ext_resource type="Script" uid="uid://cm6ghw116o51f" path="res://main/audio_manager/audio_manager.gd" id="1_8qypr"]
[ext_resource type="AudioStream" uid="uid://djcbwpg7kcog1" path="res://assets/sounds/sfx/Win_Coins.ogg" id="2_53i8p"]
[ext_resource type="AudioStream" uid="uid://db2c1vuwvcyx5" path="res://assets/sounds/sfx/button_hover.wav" id="3_o8e8i"]
[ext_resource type="AudioStream" uid="uid://pjebnmaxs6mp" path="res://assets/sounds/sfx/button_000.wav" id="4_3o0xj"]

[node name="AudioManager" type="Node2D"]
script = ExtResource("1_8qypr")

[node name="Coins" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_53i8p")
volume_db = -9.0
bus = &"SFX"

[node name="Tempo" type="Timer" parent="."]
autostart = true

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_o8e8i")
bus = &"SFX"

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3o0xj")
bus = &"SFX"

[connection signal="timeout" from="Tempo" to="." method="_on_tempo_timeout"]
